--- a/assets/style5.css
+++ b/assets/style5.css
@@ -5,7 +5,7 @@
     --color-heading: #203754;
     --color-shadow: #00a79c51;
     --color-light-shade: #f7f1fd;
-    --color-primary: #614BAD;
+    --color-primary: #039902;
     --color-text: #11111199;
     --color-dark: #111111;
     --primary-color: rgba(47, 33, 100, 1);
